--- a/Style/main.css
+++ b/Style/main.css
@@ -192,7 +192,7 @@ body {
   color: rgba(255, 255, 255, 0.7);
   font-family: 'OpenSans-Semibold';
   font-size: 14px;
-  padding: 0 26%;
+  padding: 0 23px;
   display: block;
   min-height: 70px;
   width: auto;
