--- a/Style/main.css
+++ b/Style/main.css
@@ -176,6 +176,7 @@ body {
   width: 100%;
   min-height: 70px;
   position: relative;
+  background-color: #000;
 }
 
 .main_header__navlist:before {
@@ -220,4 +221,78 @@ body {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+  -webkit-flex-direction: row;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.main_header__top_form-left_column {
+  width: 48%;
+}
+
+.main_header__top_form-left_column h1 {
+  font-family: 'Raleway-Regular', "OpenSans";
+  font-size: 36px;
+  color: #fff;
+  padding-top: 28px;
+  padding-bottom: 70px;
+  line-height: 1.2;
+  position: relative;
+}
+
+.main_header__top_form-left_column h1:after {
+  content: "";
+  position: absolute;
+  top: 150px;
+  left: 0;
+  width: 64px;
+  height: 2px;
+  background-color: #fff;
+}
+
+.main_header__top_form-left_column p {
+  font-family: 'Raleway Light', "OpenSans";
+  font-size: 16px;
+  line-height: 23px;
+  color: rgba(255, 255, 255, 0.8);
+  padding-bottom: 44px;
+}
+
+.header_button {
+  width: 131px;
+  height: 40px;
+  border: 2px solid white;
+  background-color: transparent;
+  color: #fff;
+  font-family: "OpenSans-Semibold";
+  font-size: 15px;
+  cursor: pointer;
+}
+
+.main_header_form {
+  max-width: 275px;
+  min-width: 265px;
+}
+
+.main_header_form h2 {
+  font-family: "Open Sans";
+  font-weight: 500;
+  font-size: 20px;
+  text-align: center;
+  line-height: 2.5;
+  background-color: #f5f5f5;
+  height: 54px;
+  border-radius: 10px 10px 0 0;
+}
+
+.main_header_form-input_wraper {
+  background-color: #fff;
+  width: 100%;
+  text-align: center;
+}
+
+.main_header_form-button {
+  width: 100%;
+  cursor: pointer;
+  border: none;
 }
