--- a/Style/main.css
+++ b/Style/main.css
@@ -218,12 +218,16 @@ body {
 .wraper {
   max-width: 1104px;
   margin: 0 auto;
+  height: 640px;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-flex-direction: row;
       -ms-flex-direction: row;
           flex-direction: row;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .main_header__top_form-left_column {
@@ -269,20 +273,29 @@ body {
   cursor: pointer;
 }
 
+.main_header__top_form-right_column {
+  width: 52%;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-justify-content: flex-end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
 .main_header_form {
-  max-width: 275px;
-  min-width: 265px;
+  width: 360px;
 }
 
 .main_header_form h2 {
   font-family: "Open Sans";
-  font-weight: 500;
+  font-weight: 800;
   font-size: 20px;
   text-align: center;
   line-height: 2.5;
   background-color: #f5f5f5;
   height: 54px;
-  border-radius: 10px 10px 0 0;
+  border-radius: 5px 5px 0 0;
 }
 
 .main_header_form-input_wraper {
@@ -291,8 +304,34 @@ body {
   text-align: center;
 }
 
+.main_header_form-input_wraper input {
+  border: 1px solid #fbfbfb;
+  border-top: none;
+  border-bottom: 1px solid #d6d6d6;
+  margin-bottom: 36px;
+  width: 70%;
+  font-family: "Open Sans";
+  font-size: 14px;
+  color: #000;
+  padding: 3px 13px;
+}
+
+.main_header_form-input_wraper input:focus::-webkit-input-placeholder {
+  color: transparent;
+}
+
+.main_header_form-input_wraper input:first-child {
+  margin-top: 36px;
+}
+
 .main_header_form-button {
   width: 100%;
   cursor: pointer;
   border: none;
+  border-radius: 0 0 5px 5px;
+  height: 54px;
+  background-color: #ff9b51;
+  color: #fff;
+  font-family: "OpenSans-Semibold";
+  font-size: 15px;
 }
