adedd content block 1

--- a/Sass/main.scss
+++ b/Sass/main.scss
@@ -146,6 +146,22 @@ a {
 	max-width: 1104px;
 	margin: 0 auto;
 }
+
+@mixin OpenSans20black{
+	font-family: "Open Sans";
+	font-size: 20px;
+	color: $gray;
+	font-weight: bold;
+	line-height: 1.2;
+}
+
+@mixin OpenSansReg14{
+	font-family: "Open Sans";
+	font-size: 14px;
+	line-height: 1.43;
+	color: #86878b;
+}
+
 /*-----------------------------------------------------------------------------------*/
 
 /* VARIABLES */
@@ -168,6 +184,10 @@ body{
 	max-width: 1400px;
 	margin: 0 auto;
 	background-color: #333;
+}
+
+.wraper{
+	@include width-wraper;
 }
 
 .main_header {
@@ -222,9 +242,9 @@ body{
 
 }
 
-.wraper {
+.wraper_top {
 	@include width-wraper;
-	height: 640px;
+	min-height: 640px;
 	display: flex;
 	flex-direction: row;
 	align-items: center;
@@ -262,8 +282,8 @@ body{
 	padding-bottom: 44px;
 }
 .header_button {
-	width: 131px;
-	height: 40px;
+	padding: 0 25px; 
+	min-height: 40px;
 	border: 2px solid white;
 	background-color: transparent;
 	color: #fff;
@@ -289,7 +309,7 @@ body{
 	text-align: center;
 	line-height: 2.5;
 	background-color: #f5f5f5; 
-	height: 54px;
+	min-height: 54px;
 	border-radius: 5px 5px 0 0;
 }
 
@@ -325,9 +345,116 @@ body{
 	cursor: pointer;
 	border: none;
 	border-radius: 0 0 5px 5px;
-	height: 54px;
+	min-height: 54px;
 	background-color: $orange;
 	color: #fff;
 	font-family: "OpenSans-Semibold";
 	font-size: 15px;
+}
+
+.main_header_form-button:hover{
+	background-color: $deep_orange;
+}
+
+.main_body__top_social_line-bg {
+	background-color: #fff;
+	min-height: 105px;
+	box-shadow: 0 1px 4px 1px rgba(0, 0, 0, .4);
+	position: relative;
+}
+
+.main_body__top_social_line {
+	min-height: 105px;
+	display: flex;
+	flex-direction: row;
+}
+
+.main_body__top_social_line-text_block{
+	width: 35%;
+}
+
+.main_body__top_social_line-text_block h3{
+	@include OpenSans20black;
+	padding-top: 20px;
+}
+
+.main_body__top_social_line-text_block p{
+	@include OpenSansReg14;
+	padding-top: 5px;
+	margin-bottom: 10px;
+}
+
+.main_body__top_social_line-icon_block {
+	display: flex;
+	align-items: center;
+	margin: 0 auto;
+}
+
+.main_body__content_block_1-bg {
+	background-color: #fff;
+	min-height: 595px;
+}
+
+.main_body__content_block_1 {
+	min-height: 595px;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	&-tabs{
+		width: 110px;
+		& li{
+			height: 110px;
+			width: 110px;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			background-color: $gray;
+			border: 1px solid #c7c7c7;
+			@include OpenSans20black;
+			font-size: 14px;
+			&:first-child{
+				border-radius: 5px 5px 0 0;
+			}
+			&:last-child{
+				border-radius: 0 0 5px 5px;
+			}	
+			& a{
+				color: #fff;
+			}
+		}
+		& .active_tab{
+			background-color: $deep-orange;
+		}
+	}
+	&-text_block{
+		
+		min-height: 333px;
+		padding-left: 100px;
+		padding-right: 100px;
+		display: flex;
+		flex-direction: column;
+		align-items: flex-start;
+		& h3{
+			@include OpenSans20black;
+			margin-bottom: 25px;
+		}
+		& p{
+			@include OpenSansReg14;
+			padding-top: 25px;
+		}
+		& button{
+			height: 44px;
+			padding: 0 24px;
+			background-color: $deep-orange;
+			border: none;
+			border-radius: 4px;
+			color: #fff;
+			font-family: "OpenSans-Semibold";
+			font-size: 15px;
+			margin-top: 48px;
+		}
+	}
+	&-img_block{
+		width: 320px;
+	}
 }
