--- a/Style/main.css
+++ b/Style/main.css
@@ -85,7 +85,7 @@ a {
 /* Sprite */
 /*-----------------------------------------------------------------------------------*/
 .big_sprite {
-  background-image: url(/img/Sprite/sprite.png);
+  background-image: url(../img/Sprite/sprite.png);
   background-repeat: no-repeat;
   display: block;
 }
@@ -395,7 +395,7 @@ body {
 }
 
 .main_body__content_block_1-bg {
-  background-color: #fff;
+  background-color: #f5f5f5;
   min-height: 595px;
 }
 
@@ -412,13 +412,7 @@ body {
           align-items: center;
 }
 
-.main_body__content_block_1-tabs {
-  width: 110px;
-}
-
 .main_body__content_block_1-tabs li {
-  height: 110px;
-  width: 110px;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
@@ -448,6 +442,11 @@ body {
 
 .main_body__content_block_1-tabs li a {
   color: #fff;
+  display: block;
+  height: 110px;
+  width: 110px;
+  text-align: center;
+  line-height: 8;
 }
 
 .main_body__content_block_1-tabs .active_tab {
@@ -489,15 +488,318 @@ body {
 .main_body__content_block_1-text_block button {
   height: 44px;
   padding: 0 24px;
+  margin-top: 48px;
+  margin-bottom: 20px;
   background-color: #ff8b38;
   border: none;
   border-radius: 4px;
   color: #fff;
   font-family: "OpenSans-Semibold";
   font-size: 15px;
-  margin-top: 48px;
+  cursor: pointer;
 }
 
 .main_body__content_block_1-img_block {
   width: 320px;
+}
+
+.main_body__content_block_2-bg {
+  background-color: #fff;
+}
+
+.main_body__content_block_2 {
+  min-height: 596px;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-direction: row;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.main_body__content_block_2-img_block {
+  -webkit-flex-grow: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-justify-content: flex-start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+.main_body__content_block_2-text_block {
+  width: 40%;
+  position: relative;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.main_body__content_block_2-text_block__top h3 {
+  font-family: "Open Sans";
+  font-size: 20px;
+  color: #333333;
+  font-weight: bold;
+  line-height: 1.2;
+}
+
+.main_body__content_block_2-text_block__top p {
+  font-family: "Open Sans";
+  font-size: 14px;
+  line-height: 1.43;
+  color: #86878b;
+  margin-top: 55px;
+  margin-bottom: 42px;
+  position: relative;
+}
+
+.main_body__content_block_2-text_block__top p:before {
+  content: "";
+  position: absolute;
+  top: -25px;
+  left: 0;
+  height: 2px;
+  width: 64px;
+  background-color: #ff9b51;
+}
+
+.main_body__content_block_2-text_block__bottom {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-direction: row;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  margin-bottom: 38px;
+}
+
+.main_body__content_block_2-text_block__bottom-img {
+  margin-right: 25px;
+}
+
+.main_body__content_block_2-text_block__bottom-articles h4 {
+  font-family: "OpenSans-Semibold";
+  font-size: 14px;
+  margin-bottom: 5px;
+}
+
+.main_body__content_block_2-text_block__bottom-articles p {
+  font-family: "Open Sans";
+  font-size: 14px;
+  line-height: 1.43;
+  color: #86878b;
+}
+
+.main_body__content_block_3 {
+  min-height: 596px;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-direction: row;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.main_body__content_block_3-text_block {
+  width: 43%;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-align-items: flex-start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.main_body__content_block_3-text_block h3 {
+  font-family: "Open Sans";
+  font-size: 20px;
+  color: #333333;
+  font-weight: bold;
+  line-height: 1.2;
+  margin-bottom: 25px;
+  position: relative;
+}
+
+.main_body__content_block_3-text_block h3:after {
+  content: "";
+  position: absolute;
+  bottom: -25px;
+  left: 0;
+  height: 2px;
+  width: 64px;
+  background-color: #ff9b51;
+}
+
+.main_body__content_block_3-text_block p {
+  font-family: "Open Sans";
+  font-size: 14px;
+  line-height: 1.43;
+  color: #86878b;
+  padding-top: 25px;
+}
+
+.main_body__content_block_3-img_block {
+  -webkit-flex-grow: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-justify-content: flex-end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.main_body__content_block_4-bg {
+  background-color: #fff;
+}
+
+.main_body__content_block_4 {
+  min-height: 591px;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.main_body__content_block_4-header h2 {
+  font-family: 'Raleway-Regular', "OpenSans";
+  font-size: 36px;
+  color: #000;
+  line-height: 1.2;
+  position: relative;
+  margin-bottom: 60px;
+}
+
+.main_body__content_block_4-header h2:after {
+  content: "";
+  position: absolute;
+  bottom: -30px;
+  left: 42%;
+  height: 2px;
+  width: 64px;
+  background-color: #ff9b51;
+}
+
+.main_body__content_block_4-header p {
+  font-family: "Open Sans";
+  font-size: 14px;
+  line-height: 1.43;
+  color: #86878b;
+  margin-bottom: 80px;
+}
+
+.main_body__content_block_4-elem-list {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-direction: row;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.main_body__content_block_4-elem-list .img {
+  margin: 0 auto;
+  margin-bottom: 25px;
+}
+
+.main_body__content_block_4-elem-list-element {
+  margin: 0 16px;
+}
+
+.main_body__content_block_4-elem-list-element h3 {
+  font-family: "Open Sans";
+  font-size: 20px;
+  color: #333333;
+  font-weight: bold;
+  line-height: 1.2;
+  text-align: center;
+  margin-bottom: 24px;
+}
+
+.main_body__content_block_4-elem-list-element p {
+  font-family: "Open Sans";
+  font-size: 14px;
+  line-height: 1.43;
+  color: #86878b;
+  text-align: center;
+}
+
+.main_body__content_block_5-bg {
+  background-color: #f5f5f5;
+}
+
+.main_body__content_block_5 {
+  min-height: 883px;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.main_body__content_block_5-header h2 {
+  font-family: 'Raleway-Regular', "OpenSans";
+  font-size: 36px;
+  color: #000;
+  line-height: 1.2;
+  position: relative;
+  margin-bottom: 60px;
+  text-align: center;
+}
+
+.main_body__content_block_5-header h2:after {
+  content: "";
+  position: absolute;
+  bottom: -30px;
+  left: 42%;
+  height: 2px;
+  width: 64px;
+  background-color: #ff9b51;
+}
+
+.main_body__content_block_5-header p {
+  font-family: "Open Sans";
+  font-size: 14px;
+  line-height: 1.43;
+  color: #86878b;
+  margin-bottom: 80px;
+}
+
+.main_body__content_block_5-elem-list {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-direction: row;
+      -ms-flex-direction: row;
+          flex-direction: row;
 }
