--- a/Sass/main.scss
+++ b/Sass/main.scss
@@ -261,7 +261,7 @@ body{
 	font-size: 36px;
 	color: #fff;
 	padding-top: 28px;
-	padding-bottom: 70px;
+	padding-bottom: 35px;
 	line-height: 1.2;
 	position: relative;
 }
@@ -269,8 +269,9 @@ body{
 .main_header__top_form-left_column h1:after{
 	content: "";
 	position: absolute;
-	top: 150px;
+	bottom: 0px;
 	left: 0;
+	
 	width: 64px;
 	height: 2px;
 	background-color: #fff; 
@@ -282,6 +283,7 @@ body{
 	line-height: 23px;
 	color: rgba(255,255,255,.8);
 	padding-bottom: 44px;
+	padding-top: 35px;
 }
 .header_button {
 	padding: 0 25px; 
@@ -580,7 +582,8 @@ body{
 			content: "";
 			position: absolute;
 			bottom: -30px;
-			left: 42%;
+			left: 50%;
+			transform: translate(-50%, 0);
 			height: 2px;
 			width: 64px;
 			background-color: $orange;
@@ -635,7 +638,8 @@ body{
 			content: "";
 			position: absolute;
 			bottom: -30px;
-			left: 42%;
+			left: 50%;
+			transform: translate(-50%, 0);
 			height: 2px;
 			width: 64px;
 			background-color: $orange;
@@ -647,7 +651,298 @@ body{
 		margin-bottom: 80px;
 	}
 	&-elem-list{
+		width: 100%;
 		display: flex;
 		flex-direction: row;
+		justify-content: space-around;
+		align-items: flex-end;
+		&-element{
+			margin: 0 5px;
+			width: 300px;
+			& h3{
+				@include OpenSans20black;
+				color: #fff;
+				height: 59px;
+				background-color: $gray;
+				border-bottom: 1px solid #fff;
+				text-align: center;
+				line-height: 3;
+			
+			}
+			& p{
+				height: 141px;
+	
+				background-color: $gray;
+				font-family: "Raleway";
+				font-weight: bold;
+				color: #fff;
+				font-size: 28px;
+				text-align: center;
+				padding-top: 10px;
+				border-bottom: 5px solid $deep-orange;
+				& span{
+					font-size: 100px;
+				}
+				& i{
+					line-height: 1.2;
+					font-family: "OpenSans-Semibold";
+					font-size: 14px;
+					color: rgba(255,255,255,.5);
+				}
+			}
+			& li{
+				
+				padding: 6px 0;
+				border-bottom: 1px solid #f5f5f5;
+				background-color: #fff;
+				text-align: center;
+				@include OpenSansReg14;
+				text-transform: uppercase;
+			}
+			&-best{
+				width: 300px;
+					& h3{
+						@include OpenSans20black;
+						color: #fff;
+						height: 59px;
+						background-color: $gray;
+						border-bottom: 1px solid #fff;
+						text-align: center;
+						line-height: 3;
+					}
+					& p{
+						height: 141px;
+						background-color: $gray;
+						font-family: "Raleway";
+						font-weight: bold;
+						color: #fff;
+						font-size: 28px;
+						text-align: center;
+						padding-top: 10px;
+						border-bottom: 40px solid $deep-orange;
+						& span{
+								font-size: 100px;
+						}
+						& i{
+							line-height: 3;
+							font-family: "OpenSans-Semibold";
+							font-size: 14px;
+							color: rgba(255,255,255,.5);
+							position: relative;
+							display: block;
+							&:after{
+								content: "OUR MOST POPULAR";
+								position: absolute;
+								width: 300px;
+								top: 40px;
+								left: 50%;
+								transform: translate(-50%, 0);
+								color: #fff;
+								font-style: normal;
+							}
+						}
+					}
+					& li{
+						padding: 6px 0;
+						border-bottom: 1px solid #f5f5f5;
+						background-color: #fff;
+						text-align: center;
+						@include OpenSansReg14;
+						text-transform: uppercase;
+					}
+			}
+		}
 	}	
+}
+.main_body__content_block_6-bg {
+	background-color: #fff;
+}
+.main_body__content_block_6 {
+	min-height: 592px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	&-header h2{
+		font-family: 'Raleway-Regular', "OpenSans";
+		font-size: 36px;
+		color: #000;
+		line-height: 1.2;
+		position: relative;
+		margin-bottom: 60px;
+		text-align: center;
+		&:after{
+			content: "";
+			position: absolute;
+			bottom: -30px;
+			left: 50%;
+			transform: translate(-50%, 0);
+			height: 2px;
+			width: 64px;
+			background-color: $orange;
+		}
+	}
+
+	&-header p{
+		@include OpenSansReg14;
+		margin-bottom: 80px;
+		text-align: center;
+	}
+	&-elem-list{
+		width: 100%;
+		display: flex;
+		flex-direction: row;
+		justify-content: space-around;
+		&-element{
+			margin: 0 5px; 
+		}
+		&-element_review{
+			box-sizing: border-box;
+			width: 274px;
+			height: 147px;
+			background-image: url(../img/mind.png);
+			font-family: "Open Sans";
+			font-size: 14px;
+			font-style: italic;
+			padding: 20px 12px;
+		}
+		&-element_artist-block{
+			position: relative;
+			display: block;
+		}
+		&-element_artist-block p{
+			padding-left: 90px;
+			display: block;
+			@include OpenSans20black;
+			padding-top: 10px;
+		}
+		&-element_artist-block em{
+			padding-left: 90px;
+			display: block;
+			@include OpenSansReg14;
+			line-height: 0;
+			
+		}
+		&-element_artist-block:before{
+			content: "";
+			position: absolute;
+			left: 0;
+			top: 5px;
+			width: 70px;
+			height: 70px;
+			background-image: url(../img/avatar.png);
+		}
+	}
+}	
+
+.main_body__content_block_7-bg {
+	background-color: #111;
+	background-image: url(../img/footer_bg.png);
+}
+.main_body__content_block_7 {
+	min-height: 319px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	&-header h2{
+		font-family: 'Raleway-Regular', "OpenSans";
+		font-size: 36px;
+		color: #fff;
+		line-height: 1.2;
+		position: relative;
+		margin-bottom: 60px;
+		text-align: center;
+		&:after{
+			content: "";
+			position: absolute;
+			bottom: -30px;
+			left: 50%;
+			transform: translate(-50%, 0);
+			height: 2px;
+			width: 64px;
+			background-color: #fff;
+		}
+	}
+
+	&-header p{
+		@include OpenSansReg14;
+		color: #fff;
+		margin-bottom: 35px;
+		text-align: center;
+	}
+}	
+
+.main_body__content_block_8-bg {
+	background-color: #fff;
+}
+.main_body__content_block_8 {
+	min-height: 613px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	&-header h2{
+		font-family: 'Raleway-Regular', "OpenSans";
+		font-size: 36px;
+		color: #000;
+		line-height: 1.2;
+		position: relative;
+		margin-bottom: 60px;
+		text-align: center;
+		&:after{
+			content: "";
+			position: absolute;
+			bottom: -30px;
+			left: 50%;
+			transform: translate(-50%, 0);
+			height: 2px;
+			width: 64px;
+			background-color: $deep-orange;
+		}
+	}
+
+	&-header p{
+		@include OpenSansReg14;
+		color: #000;
+		margin-bottom: 35px;
+		text-align: center;
+	}
+	&-form button{
+			height: 44px;
+			padding: 0 24px;
+			margin-top: 48px;
+			margin-bottom: 20px;
+			background-color: $deep-orange;
+			border: none;
+			border-radius: 4px;
+			color: #fff;
+			font-family: "OpenSans-Semibold";
+			font-size: 15px;
+			cursor: pointer;
+		}
+}	
+footer{
+	height: 83px;
+	background-color: #000;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	padding-top: 5px;
+	& p{
+		
+		padding-top: 10px;
+		color: #fff;
+		@include OpenSansReg14;
+		font-size: 12px;
+	}
+}
+.footer__social_block{
+	width: 634px;
+	height: 30px;
+	background-image: url(../img/social_buttons.png);
+	background-repeat: no-repeat;
+	background-size: contain;
+	background-position-x: center;
 }
