--- a/Sass/queries.scss
+++ b/Sass/queries.scss
@@ -48,3 +48,102 @@
 	}
 
 }
+@media (max-width: 700px){
+	.wraper_top{
+		flex-direction: column;
+	}
+	.main_header__top_form-left_column{
+		width: 100%;
+		& p{
+			display: none;
+		}
+		& img{
+			margin: 0 auto;
+			display: block;
+		}
+		& p{
+			display: none;
+		}
+		& h1{
+			text-align: center;
+			padding-bottom: 28px;
+			&:after{
+				display: none;
+			}
+		}
+		& button{
+			margin: 0 auto;
+			display: block;
+			margin-bottom: 28px;
+		}
+	}
+	.main_header__top_form-right_column{
+		width: 90%;
+	}
+	.main_header__top_form-right_column form{
+		width: 285px;
+		display: block;
+		margin: 0 auto;
+	}
+	.main_header_form h2{
+		font-size: 16px;
+		line-height: 3;
+	}
+	.main_body__content_block_1{
+		justify-content: space-between;
+	
+		&-img_block {
+			display: none;
+		}
+		&-text_block {
+			width: 100%;
+		}
+		
+		
+	}
+	.main_body__content_block_2{
+		justify-content: center;
+	}
+	.main_body__content_block_2-img_block{
+		display: none;
+	}
+	.main_body__content_block_2-text_block {
+		width: 95%;
+		&__top h3{
+			text-align: center;
+		}
+		&__top p:before{
+			left: 50%;
+			transform: translate(-50%, 0); 
+		}
+	}
+	.main_body__content_block_3{
+		min-height: 300px;
+		justify-content: center;
+	}
+	.main_body__content_block_3-img_block{
+		display: none;
+	}
+	.main_body__content_block_3-text_block {
+		width: 95%;
+		& h3{
+			width: 100%;
+			text-align: center;
+			&:after{
+			left: 50%;
+			transform: translate(-50%, 0); 
+		}
+		}
+	}
+
+}	
+@media (max-width: 390px){
+	.main_body__content_block_1-tabs{
+			align-self: flex-start;
+			& li a{
+				height: 70px;
+				width: 70px;
+				line-height: 5;
+			}
+	}		
+}
