--- a/Sass/main.scss
+++ b/Sass/main.scss
@@ -662,6 +662,9 @@ body{
 		flex-direction: row;
 		justify-content: space-around;
 		align-items: flex-end;
+		& a{
+			display: block;
+		}
 		&-element{
 			margin: 0 5px;
 			width: 300px;
@@ -912,7 +915,7 @@ body{
 
 	&-header p{
 		@include OpenSansReg14;
-		color: #000;
+		color: $lite-gray;
 		margin-bottom: 35px;
 		text-align: center;
 	}
@@ -1000,7 +1003,7 @@ footer{
 }
 
 .footer__social_block{
-	width: 634px;
+	min-width: 100%;
 	height: 30px;
 	background-image: url(../img/social_buttons.png);
 	background-repeat: no-repeat;
