--- a/Style/main.css
+++ b/Style/main.css
@@ -824,6 +824,10 @@ body {
           align-items: flex-end;
 }
 
+.main_body__content_block_5-elem-list a {
+  display: block;
+}
+
 .main_body__content_block_5-elem-list-element {
   margin: 0 5px;
   width: 300px;
@@ -1166,7 +1170,7 @@ body {
   font-size: 14px;
   line-height: 1.43;
   color: #86878b;
-  color: #000;
+  color: #86878b;
   margin-bottom: 35px;
   text-align: center;
 }
@@ -1293,7 +1297,7 @@ footer p {
 }
 
 .footer__social_block {
-  width: 634px;
+  min-width: 100%;
   height: 30px;
   background-image: url(../img/social_buttons.png);
   background-repeat: no-repeat;
@@ -1306,7 +1310,7 @@ footer p {
 /*-----------------------------------------------------------------------------------*/
 @media (max-width: 1150px) {
   .wraper_top {
-    padding: 15px 20px;
+    padding: 25px 20px;
   }
   .wraper {
     padding: 30px 20px;
@@ -1453,6 +1457,51 @@ footer p {
   }
 }
 
+@media (max-width: 590px) {
+  .main_body__top_social_line-bg {
+    min-height: 60px;
+  }
+  .main_body__top_social_line {
+    min-height: 60px;
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+  .main_body__content_block_4-header h2 {
+    text-align: center;
+  }
+  .main_body__content_block_4-elem-list {
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .main_body__content_block_4-elem-list-element p {
+    margin-bottom: 40px;
+  }
+  .main_body__content_block_5-header p {
+    text-align: center;
+  }
+  .main_body__content_block_5-elem-list {
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .main_body__content_block_5-elem-list a {
+    margin-bottom: 30px;
+  }
+  .main_body__content_block_5-elem-list a {
+    margin-bottom: 30px;
+  }
+  .main_body__content_block_7-bg {
+    padding: 0 0;
+  }
+  .main_body__content_block_7 {
+    padding: 15px 15px;
+  }
+}
+
 @media (max-width: 390px) {
   .main_body__content_block_1-tabs {
     -webkit-align-self: flex-start;
@@ -1463,5 +1512,20 @@ footer p {
     height: 70px;
     width: 70px;
     line-height: 5;
+  }
+  .main_body__content_block_8-form-input {
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .main_body__content_block_8-form-input textarea {
+    margin-left: 0;
+    width: 100%;
+  }
+  .main_body__content_block_8-form button {
+    margin-bottom: 10px;
+  }
+  .main_body__content_block_8-form-input_left_block input {
+    margin-right: 0;
   }
 }
