--- a/Sass/main.scss
+++ b/Sass/main.scss
@@ -178,6 +178,21 @@ $black: #000;
 
 /*-----------------------------------------------------------------------------------*/
 
+/* ANIMATION */
+
+/*-----------------------------------------------------------------------------------*/
+@keyframes rotate-burger {
+    0% {
+        transform: rotate(0deg);
+        left: 5px;
+    }
+    100% {
+        transform: rotate(90deg);
+		left: 10px;
+    }
+}
+/*-----------------------------------------------------------------------------------*/
+
 /* MAIN */
 
 /*-----------------------------------------------------------------------------------*/
@@ -194,21 +209,26 @@ body{
 
 .main_header {
 	background-color: $black;
+	max-width: 1150px;
+	margin: 0 auto;
+	min-height: 70px;
+}
 
+.main_header__navlist-bg {
+	background-color: $black;
+	max-width: 1150px;
+	margin: 0 auto;
+	min-height: 70px;
 }
 
 .main_header__navlist {
-	max-width: 1150px;
-	margin: 0 auto;
 	display: flex;
 	flex-direction: row-reverse;
 	justify-content: flex-start;
 	list-style: none;
 	width: 100%;
-	min-height: 70px;
 	position: relative;
 	background-color: $black;
-
 }
 
 .main_header__navlist:before{
@@ -236,6 +256,57 @@ body{
 .main_header__navlist li a:hover{
 	background-color: #222;
 }
+
+.main_header__navlist-burger {
+	display: none;
+	position: absolute;
+	right: 50px;
+	top: 8px;
+	width: 50px;
+	height: 50px;
+	border: solid 2px #fff;
+	& li a{
+		display: none;
+		color: rgba(255,255,255,.7);
+		font-family: 'OpenSans-Semibold';
+		font-size: 14px;
+		padding: 15px 30px;
+		background-color: #000;
+		width: 50%;
+
+	}
+	&:hover .main_header__navlist-burger-list a{
+		display: block;
+		text-align: center;
+		&:hover{
+			background-color: #111;
+		}
+	}
+	&-list{
+		position: absolute;
+		left: -100px;
+		top: 52px;
+		z-index: 10;
+		width: 300px;
+	}
+	&:before{
+		content: "";
+		position: absolute;
+		width: 30px;
+		height: 3px;
+		background-color: #fff;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+
+	}
+	&:hover:before{
+		animation-name: rotate-burger;
+    	animation-duration: .5s;
+    	animation-fill-mode: forwards;
+	}
+}
+
 
 .main_header__top_form {
 	min-height: 641px;
