--- a/Style/main.css
+++ b/Style/main.css
@@ -148,6 +148,34 @@ a {
 /* VARIABLES */
 /*-----------------------------------------------------------------------------------*/
 /*-----------------------------------------------------------------------------------*/
+/* ANIMATION */
+/*-----------------------------------------------------------------------------------*/
+@-webkit-keyframes rotate-burger {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+    left: 5px;
+  }
+  100% {
+    -webkit-transform: rotate(90deg);
+            transform: rotate(90deg);
+    left: 10px;
+  }
+}
+@keyframes rotate-burger {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+    left: 5px;
+  }
+  100% {
+    -webkit-transform: rotate(90deg);
+            transform: rotate(90deg);
+    left: 10px;
+  }
+}
+
+/*-----------------------------------------------------------------------------------*/
 /* MAIN */
 /*-----------------------------------------------------------------------------------*/
 body {
@@ -163,11 +191,19 @@ body {
 
 .main_header {
   background-color: #000;
+  max-width: 1150px;
+  margin: 0 auto;
+  min-height: 70px;
+}
+
+.main_header__navlist-bg {
+  background-color: #000;
+  max-width: 1150px;
+  margin: 0 auto;
+  min-height: 70px;
 }
 
 .main_header__navlist {
-  max-width: 1150px;
-  margin: 0 auto;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
@@ -179,7 +215,6 @@ body {
           justify-content: flex-start;
   list-style: none;
   width: 100%;
-  min-height: 70px;
   position: relative;
   background-color: #000;
 }
@@ -212,6 +247,65 @@ body {
 
 .main_header__navlist li a:hover {
   background-color: #222;
+}
+
+.main_header__navlist-burger {
+  display: none;
+  position: absolute;
+  right: 50px;
+  top: 8px;
+  width: 50px;
+  height: 50px;
+  border: solid 2px #fff;
+}
+
+.main_header__navlist-burger li a {
+  display: none;
+  color: rgba(255, 255, 255, 0.7);
+  font-family: 'OpenSans-Semibold';
+  font-size: 14px;
+  padding: 15px 30px;
+  background-color: #000;
+  width: 50%;
+}
+
+.main_header__navlist-burger:hover .main_header__navlist-burger-list a {
+  display: block;
+  text-align: center;
+}
+
+.main_header__navlist-burger:hover .main_header__navlist-burger-list a:hover {
+  background-color: #111;
+}
+
+.main_header__navlist-burger-list {
+  position: absolute;
+  left: -100px;
+  top: 52px;
+  z-index: 10;
+  width: 300px;
+}
+
+.main_header__navlist-burger:before {
+  content: "";
+  position: absolute;
+  width: 30px;
+  height: 3px;
+  background-color: #fff;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.main_header__navlist-burger:hover:before {
+  -webkit-animation-name: rotate-burger;
+          animation-name: rotate-burger;
+  -webkit-animation-duration: .5s;
+          animation-duration: .5s;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
 }
 
 .main_header__top_form {
@@ -1458,6 +1552,12 @@ footer p {
 }
 
 @media (max-width: 590px) {
+  .main_header__navlist-burger {
+    display: block;
+  }
+  .main_header__navlist li a {
+    display: none;
+  }
   .main_body__top_social_line-bg {
     min-height: 60px;
   }
